--- a/printer.cfg
+++ b/printer.cfg
@@ -125,7 +125,7 @@ max_temp: 300
 max_extrude_only_accel: 800 #Orbiter v2
 max_extrude_only_velocity: 120 #Orbiter v2
 max_extrude_only_distance: 500 #Orbiter v2
-pressure_advance: 0.025
+pressure_advance: 0.020
 pressure_advance_smooth_time: 0.03
 
 
@@ -212,6 +212,15 @@ fade_target: 0
 #   Misc
 #####################################################################
 
+[filament_switch_sensor RunoutSensor]
+switch_pin: PC15    ## SKR E3 mini v3
+pause_on_runout: True
+runout_gcode: PAUSE
+insert_gcode: RESUME
+event_delay: 3.0
+pause_delay: 0.5
+
+
 [screws_tilt_adjust]
 screw1: 70.5,37.5
 screw1_name: front left screw
@@ -230,7 +239,6 @@ aliases:
     # EXP1 header
     EXP1_1=PB5,  EXP1_3=PA9,   EXP1_5=PA10, EXP1_7=PB8, EXP1_9=<GND>,
     EXP1_2=PA15, EXP1_4=<RST>, EXP1_6=PB9,  EXP1_8=PD6, EXP1_10=<5V>
-    
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -242,21 +250,21 @@ aliases:
 #*# pid_kd = 62.447
 #*#
 #*# [bltouch]
-#*# z_offset = 3.519
+#*# z_offset = 3.360
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.021250, 0.082500, 0.062500
-#*# 	  -0.015000, 0.068750, 0.067500
-#*# 	  -0.012500, 0.068750, 0.038750
+#*# 	  0.055000, 0.120000, 0.142500
+#*# 	  0.051250, 0.121250, 0.185000
+#*# 	  0.053750, 0.131250, 0.150000
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 80.25
-#*# max_x = 139.72
-#*# min_y = 94.75
-#*# max_y = 125.25
+#*# min_x = 80.22
+#*# max_x = 139.75
+#*# min_y = 94.73
+#*# max_y = 125.27000000000001
