--- a/macros.cfg
+++ b/macros.cfg
@@ -297,6 +297,19 @@ gcode:
     TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={params.BED_TEMP|default(60, true)}
     PROBE_CALIBRATE
 
+
+
+[gcode_macro Hotend_PID_240]
+gcode: 
+   PID_CALIBRATE HEATER=extruder TARGET=240
+
+[gcode_macro Bed_PID_70]
+gcode: 
+   PID_CALIBRATE HEATER=heater_bed TARGET=70
+
+   
+############################
+############################
 ; An idea for using the heated bed of a 3D printer as a filament dryer.
 ; Adds GCODE command: START_DRYER TIME=T TEMPERATURE=C CHAMBER=C
 ; (T is time in seconds, C is temperature in Celsuis)
