--- a/printer.cfg
+++ b/printer.cfg
@@ -147,10 +147,10 @@ interpolate: False
 heater_pin: PC9
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
-control: pid
-pid_Kp: 54.027
-pid_Ki: 0.770
-pid_Kd: 948.182
+#control: pid
+#pid_Kp: 54.027
+#pid_Ki: 0.770
+#pid_Kd: 948.182
 min_temp: 0
 max_temp: 130
 
@@ -159,7 +159,7 @@ max_temp: 130
 #   Fans
 #####################################################################
 
-[heater_fan nozzle_cooling_fan]
+[heater_fan hotend_fan]
 pin: PB15
 heater: heater_bed
 heater_temp: 45.0
@@ -245,26 +245,32 @@ aliases:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 16.488
-#*# pid_ki = 1.088
-#*# pid_kd = 62.447
+#*# pid_kp = 20.347
+#*# pid_ki = 1.577
+#*# pid_kd = 65.620
 #*#
 #*# [bltouch]
-#*# z_offset = 3.360
+#*# z_offset = 3.550
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.055000, 0.120000, 0.142500
-#*# 	  0.051250, 0.121250, 0.185000
-#*# 	  0.053750, 0.131250, 0.150000
+#*# 	0.050000, 0.056250, 0.107500
+#*# 	0.058750, 0.058750, 0.100000
+#*# 	0.062500, 0.072500, 0.116250
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 80.22
-#*# max_x = 139.75
-#*# min_y = 94.73
-#*# max_y = 125.27000000000001
+#*# min_x = 92.81
+#*# max_x = 127.16999999999999
+#*# min_y = 108.31
+#*# max_y = 111.67
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 74.625
+#*# pid_ki = 1.686
+#*# pid_kd = 825.539
