--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -26,10 +26,10 @@ log_level: verbose                      # Valid Options are quiet/verbose/debug
 delete_log: false                       # Deletes log on every restart, if set to true
 
 [cam 1]
-mode: mjpg                              # mjpg/rtsp
+mode: camera-streamer                              # mjpg/rtsp
 port: 8080                              # Port
 device: /dev/video0                     # See Log for available ...
-resolution: 1280x720           # widthxheight format
-max_fps: 15  # If Hardware Supports this it will be forced, otherwise ignored/coerced.
+resolution: 800x600        # widthxheight format
+max_fps: 30  # If Hardware Supports this it will be forced, otherwise ignored/coerced.
 #custom_flags:                          # You can run the Stream Services with custom flags.
 #v4l2ctl:                               # Add v4l2-ctl parameters to setup your camera, see Log what your cam is capable of.
