--- a/moonraker.conf
+++ b/moonraker.conf
@@ -54,6 +54,13 @@ channel: stable
 repo: mainsail-crew/mainsail
 path: ~/mainsail
 
+[update_manager crowsnest]
+type: git_repo
+primary_branch: master
+repo: mainsail-crew/crowsnest
+origin: https://github.com/mainsail-crew/crowsnest.git
+path: ~/crowsnest
+
 [update_manager Klipper-Adaptive-Meshing-Purging]
 type: git_repo
 channel: dev
