--- a/macros.cfg
+++ b/macros.cfg
@@ -6,7 +6,7 @@ enable_force_move: True
 variable_filament_sensor_enabled: 0 # NOTE Enable(1) or disable(0) the filament sensor, if one is connected
 variable_beeping_enabled: 1 # NOTE Enable(1) or disable(0) beeping everywhere except during gantry calibration
 variable_bed_temp_over: 10 # NOTE Start print if bed temperature is over by this amount, otherwise wait for temperature drop
-variable_kamp_enable: 1 # NOTE Enable(1) or disable(0) KAMP (adaptive mesh)
+variable_kamp_enable: 0 # NOTE Enable(1) or disable(0) KAMP (adaptive mesh)
 variable_pre_purge_prime_length: 1.40
 gcode:
     # Don't delete this section
@@ -298,7 +298,6 @@ gcode:
     PROBE_CALIBRATE
 
 
-
 [gcode_macro Hotend_PID_240]
 gcode: 
    PID_CALIBRATE HEATER=extruder TARGET=240
@@ -307,7 +306,59 @@ gcode:
 gcode: 
    PID_CALIBRATE HEATER=heater_bed TARGET=70
 
-   
+######################
+# input shaper 
+#
+[gcode_macro ADXL_SHAPE_ALL]
+description: Test resonances for both axis
+gcode:
+    M118 DO NOT TOUCH THE PRINTER UNTIL DONE!!!
+    G28
+    SHAPER_CALIBRATE AXIS=x
+    SHAPER_CALIBRATE AXIS=y
+    RUN_SHELL_COMMAND CMD=adxl_shape_x
+    RUN_SHELL_COMMAND CMD=adxl_shape_y
+    M118 Test done
+    SAVE_AND_RESTART
+
+[gcode_macro ADXL_SHAPE_X]
+description: Test resonances for X axis
+gcode:
+    M118 DO NOT TOUCH THE PRINTER UNTIL DONE!!!
+    G28
+    SHAPER_CALIBRATE AXIS=x
+    RUN_SHELL_COMMAND CMD=adxl_shape_x
+    M118 Test done
+    SAVE_AND_RESTART
+
+[gcode_macro ADXL_SHAPE_Y]
+description: Test resonances for Y axis
+gcode:
+    M118 DO NOT TOUCH THE PRINTER UNTIL DONE!!!
+    HOME_IF_NEEDED
+    SHAPER_CALIBRATE AXIS=y
+    RUN_SHELL_COMMAND CMD=adxl_shape_y
+    M118 Test done
+    SAVE_AND_RESTART
+
+# [gcode_shell_command adxl_shape_x]
+# command: sh ~/printer_data/config/shaper/adxl_shape_x.sh		# edit: ´/macro/shell_commands/´ to where your .sh file lays
+# timeout: 60.
+# verbose: True
+
+# [gcode_shell_command adxl_shape_y]
+# command: sh ~/printer_data/config/shaper/adxl_shape_y.sh		# edit: ´/macro/shell_commands/´ to where your .sh file lays
+# timeout: 60.
+# verbose: True
+
+### name file: adxl_shape_x.sh
+#~/klipper/scripts/calibrate_shaper.py /tmp/calibration_data_x_*.csv -o ~/printer_data/config/shaper_calibrate_x.png
+
+### name file: adxl_shape_y.sh
+#~/klipper/scripts/calibrate_shaper.py /tmp/calibration_data_y_*.csv -o ~/printer_data/config/shaper_calibrate_y.png
+
+
+
 ############################
 ############################
 ; An idea for using the heated bed of a 3D printer as a filament dryer.
