--- a/pico.cfg
+++ b/pico.cfg
@@ -6,7 +6,6 @@ spi_bus: spi0a
 cs_pin: pico:gpio1
 
 [resonance_tester]
-accel_chip_x: adxl345 adxl345_x
-accel_chip_y: adxl345 adxl345_y
+accel_chip: adxl345
 probe_points:
     100,100,20 # an example
