removed KAMP and moved to naitive adaptive meshing

--- a/printer.cfg
+++ b/printer.cfg
@@ -14,7 +14,6 @@
 #[include pico.cfg]
 [include input_shaper.cfg]
 [include macros.cfg]
-[include Kamp_Settings.cfg]
 
 #####################################################################
 #      Printer Basics
@@ -28,7 +27,7 @@ restart_method: command
 [printer]
 kinematics: cartesian
 max_velocity: 300
-max_accel: 3000
+max_accel: 4000
 max_z_velocity: 5
 max_z_accel: 100
 
@@ -198,7 +197,7 @@ z_hop_speed: 5
 
 [bed_mesh]
 speed: 300
-horizontal_move_z: 7 # was 5
+horizontal_move_z: 5 # was 5
 mesh_min: 50,50
 mesh_max: 170,170
 probe_count: 5,5
@@ -250,24 +249,26 @@ aliases:
 #*# pid_kd = 65.620
 #*#
 #*# [bltouch]
-#*# z_offset = 3.550
+#*# z_offset = 3.300
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.050000, 0.056250, 0.107500
-#*# 	0.058750, 0.058750, 0.100000
-#*# 	0.062500, 0.072500, 0.116250
-#*# x_count = 3
-#*# y_count = 3
+#*# 	  0.026250, 0.001250, 0.070000, 0.076250, 0.063750
+#*# 	  0.012500, -0.015000, 0.056250, 0.063750, 0.078750
+#*# 	  0.037500, 0.016250, 0.075000, 0.055000, 0.056250
+#*# 	  0.032500, 0.013750, 0.063750, 0.070000, 0.076250
+#*# 	  0.010000, -0.006250, 0.046250, 0.055000, 0.047500
+#*# x_count = 5
+#*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 92.81
-#*# max_x = 127.16999999999999
-#*# min_y = 108.31
-#*# max_y = 111.67
+#*# min_x = 50.0
+#*# max_x = 170.0
+#*# min_y = 50.0
+#*# max_y = 170.0
 #*#
 #*# [heater_bed]
 #*# control = pid
