--- a/macros.cfg
+++ b/macros.cfg
@@ -3,10 +3,9 @@ enable_force_move: True
 
 
 [gcode_macro _globals]
-variable_filament_sensor_enabled: 0 # NOTE Enable(1) or disable(0) the filament sensor, if one is connected
+variable_filament_sensor_enabled: 1 # NOTE Enable(1) or disable(0) the filament sensor, if one is connected
 variable_beeping_enabled: 1 # NOTE Enable(1) or disable(0) beeping everywhere except during gantry calibration
 variable_bed_temp_over: 10 # NOTE Start print if bed temperature is over by this amount, otherwise wait for temperature drop
-variable_kamp_enable: 0 # NOTE Enable(1) or disable(0) KAMP (adaptive mesh)
 variable_pre_purge_prime_length: 1.40
 gcode:
     # Don't delete this section
@@ -92,7 +91,6 @@ gcode:
     {% set bedtempOver = printer["gcode_macro _globals"].bed_temp_over|default(0)|int %}
     {% set maxVelocity = printer.configfile.settings.printer.max_velocity|default(200)|int %}
     {% set maxVelocityAdjusted =  (0.90 * maxVelocity * 60)|int %}
-    {% set kampEnabled=printer["gcode_macro _globals"].kamp_enable|default(0)|int %}
 
     {% if printer.configfile.settings.safe_z_home %}
         {% set startX = printer.configfile.settings.safe_z_home.home_xy_position[0]|float %}
@@ -118,22 +116,11 @@ gcode:
         G1 X{startX} Y{startY} F{maxVelocityAdjusted}
     {% endif %}
 
-    M190 S{bedtempAlmost}                                ; set & wait for bed temp
-    {% if kampEnabled == 0 %}
-        M104 S{hotendtempStepTwo}                            ; set & don't wait for hotend temp
-    {% endif %}
-    M190 S{bedtemp}                                      ; set & wait for bed temp
-    M140 S{bedtempSlicer}                                ; set & don't wait for bed temp ; set temp to sliced setting regardless
-
-    {% if kampEnabled == 0 %}
-        BED_MESH_PROFILE LOAD=default                        ; NOTE if not using a mesh, comment out this line
-        M104 S{hotendtemp}                                   ; set & don't wait for hotend temp
-        G28 Z                                                ; final z homing
-    {% else %}
-        G28 Z                                                ; final z homing
-        BED_MESH_CALIBRATE                                   ; KAMP mesh
-        M104 S{hotendtemp}                                   ; set & don't wait for hotend temp
-    {% endif %}
+    M190 S{bedtempAlmost}         ; set & wait for bed temp
+    
+    G28 Z                                                ; final z homing
+    BED_MESH_CALIBRATE ADAPTIVE=1
+    M104 S{hotendtemp}                                   ; set & don't wait for hotend temp
 
     G1 X0 Y0 F{maxVelocityAdjusted}
     M109 S{hotendtemp}                                   ; set & wait for hotend temp
@@ -189,6 +176,7 @@ gcode:
     M107                           ; turn off fan
     G90                            ; absolute positioning
     G0 X60 Y{max_y} F3600          ; park nozzle at rear
+    G1 Y200                        ; move bed forward after print
     M84                            ; disable steppers
 
 [gcode_macro LOAD_FILAMENT]
