--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -27,9 +27,11 @@ delete_log: false                       # Deletes log on every restart, if set t
 
 [cam 1]
 mode: camera-streamer                              # mjpg/rtsp
+#mode: ustreamer
 port: 8080                              # Port
+#device: /devices/platform/soc/3f980000.usb/usb1/1-1/1-1.3/1-1.3:1.0/input/input8
 device: /dev/video0                     # See Log for available ...
 resolution: 800x600        # widthxheight format
-max_fps: 30  # If Hardware Supports this it will be forced, otherwise ignored/coerced.
+max_fps: 15  # If Hardware Supports this it will be forced, otherwise ignored/coerced.
 #custom_flags:                          # You can run the Stream Services with custom flags.
 #v4l2ctl:                               # Add v4l2-ctl parameters to setup your camera, see Log what your cam is capable of.
