--- a/printer.cfg
+++ b/printer.cfg
@@ -160,8 +160,11 @@ max_temp: 130
 
 [heater_fan hotend_fan]
 pin: PB15
-heater: heater_bed
-heater_temp: 45.0
+heater: extruder
+heater_temp: 50
+fan_speed: 1.0
+kick_start_time: 0.1
+
 
 [heater_fan controller_fan]
 pin: PC7
@@ -249,21 +252,21 @@ aliases:
 #*# pid_kd = 65.620
 #*#
 #*# [bltouch]
-#*# z_offset = 3.300
+#*# z_offset = 3.060
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.026250, 0.001250, 0.070000, 0.076250, 0.063750
-#*# 	  0.012500, -0.015000, 0.056250, 0.063750, 0.078750
-#*# 	  0.037500, 0.016250, 0.075000, 0.055000, 0.056250
-#*# 	  0.032500, 0.013750, 0.063750, 0.070000, 0.076250
-#*# 	  0.010000, -0.006250, 0.046250, 0.055000, 0.047500
+#*# 	  0.015000, -0.048750, 0.025000, -0.025000, -0.010000
+#*# 	  -0.006250, -0.071250, 0.030000, -0.026250, 0.002500
+#*# 	  0.027500, -0.033750, 0.050000, -0.012500, 0.015000
+#*# 	  0.068750, 0.002500, 0.068750, 0.006250, 0.047500
+#*# 	  0.058750, -0.018750, 0.043750, 0.012500, 0.047500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
-#*# algo = lagrange
+#*# algo = bicubic
 #*# tension = 0.2
 #*# min_x = 50.0
 #*# max_x = 170.0
