--- a/printer.cfg
+++ b/printer.cfg
@@ -30,6 +30,7 @@ max_velocity: 300
 max_accel: 4000
 max_z_velocity: 5
 max_z_accel: 100
+square_corner_velocity: 5.0
 
 [exclude_object]
 # required for KAMP
@@ -125,7 +126,7 @@ max_extrude_only_accel: 800 #Orbiter v2
 max_extrude_only_velocity: 120 #Orbiter v2
 max_extrude_only_distance: 500 #Orbiter v2
 pressure_advance: 0.020
-pressure_advance_smooth_time: 0.03
+pressure_advance_smooth_time: 0.04
 
 
 [tmc2209 extruder]
@@ -252,16 +253,16 @@ aliases:
 #*# pid_kd = 65.620
 #*#
 #*# [bltouch]
-#*# z_offset = 3.060
+#*# z_offset = 3.070
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.015000, -0.048750, 0.025000, -0.025000, -0.010000
-#*# 	  -0.006250, -0.071250, 0.030000, -0.026250, 0.002500
-#*# 	  0.027500, -0.033750, 0.050000, -0.012500, 0.015000
-#*# 	  0.068750, 0.002500, 0.068750, 0.006250, 0.047500
-#*# 	  0.058750, -0.018750, 0.043750, 0.012500, 0.047500
+#*# 	0.015000, -0.048750, 0.025000, -0.025000, -0.010000
+#*# 	-0.006250, -0.071250, 0.030000, -0.026250, 0.002500
+#*# 	0.027500, -0.033750, 0.050000, -0.012500, 0.015000
+#*# 	0.068750, 0.002500, 0.068750, 0.006250, 0.047500
+#*# 	0.058750, -0.018750, 0.043750, 0.012500, 0.047500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
