fixed piss poor webcam performance

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -61,6 +61,15 @@ repo: mainsail-crew/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
 path: ~/crowsnest
 
+[update_manager KlipperScreen]
+type: git_repo
+path: ~/KlipperScreen
+origin: https://github.com/jordanruthe/KlipperScreen.git
+virtualenv: ~/.KlipperScreen-env
+requirements: scripts/KlipperScreen-requirements.txt
+system_dependencies: scripts/system-dependencies.json
+managed_services: KlipperScreen
+
 [file_manager]
 # NOTE Cancel objects feature is enabled. If you're using a low powered device, set to False.
 # Also see [exclude_object] section in printer.cfg.
