--- a/printer.cfg
+++ b/printer.cfg
@@ -34,6 +34,8 @@ square_corner_velocity: 5.0
 
 [exclude_object]
 # required for KAMP
+#pause 
+[pause_resume]
 
 [virtual_sdcard]
 path: /home/cass/printer_data/gcodes
