--- a/macros.cfg
+++ b/macros.cfg
@@ -119,7 +119,7 @@ gcode:
     M190 S{bedtempAlmost}         ; set & wait for bed temp
     
     G28 Z                                                ; final z homing
-    BED_MESH_CALIBRATE ADAPTIVE=1
+    BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
     M104 S{hotendtemp}                                   ; set & don't wait for hotend temp
 
     G1 X0 Y0 F{maxVelocityAdjusted}
@@ -285,6 +285,11 @@ gcode:
     TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={params.BED_TEMP|default(60, true)}
     PROBE_CALIBRATE
 
+
+[gcode_macro Eddy_Mesh]
+gcode: 
+  G28
+  BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
 
 [gcode_macro Hotend_PID_240]
 gcode: 
