--- a/printer.cfg
+++ b/printer.cfg
@@ -21,7 +21,6 @@
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32g0b1xx_06003B001350415833323520-if00
-# serial: /dev/ttyAMA0
 restart_method: command
 
 [printer]
@@ -117,7 +116,7 @@ enable_pin: !PD1
 microsteps: 16
 rotation_distance: 4.637 #Orbiter v2
 full_steps_per_rotation: 200 #Orbiter v2
-nozzle_diameter: 0.400
+nozzle_diameter: 0.600
 filament_diameter: 1.750
 heater_pin: PC8
 sensor_type: NTC 100K MGB18-104F39050L32
@@ -180,37 +179,81 @@ pin: PC6
 #   Probe Related
 #####################################################################
 
+# [bltouch]
+# sensor_pin: ^PC14
+# control_pin: PA1
+# x_offset: -60
+# y_offset: -10
+# #z_offset: 3.0
+# speed: 2.0
+# lift_speed: 10
+# samples: 2
+# sample_retract_dist: 5.0
+# samples_tolerance: 0.050
+# stow_on_each_sample: false
+# probe_with_touch_mode: true
 
-[bltouch]
-sensor_pin: ^PC14
-control_pin: PA1
+# [safe_z_home]
+# home_xy_position: 117.5,117.5 # Change coordinates to the center of your print bed
+# z_hop: 10 # Move up 10mm
+# z_hop_speed: 5
+
+# [bed_mesh]
+# speed: 300
+# horizontal_move_z: 5 # was 5
+# mesh_min: 50,50
+# mesh_max: 170,170
+# probe_count: 5,5
+# algorithm: bicubic
+# fade_start: 1
+# fade_end: 10
+# fade_target: 0
+
+
+#####################################################################
+# Eddy Probe
+#####################################################################
+
+[mcu eddy]
+serial: /dev/serial/by-id/usb-Klipper_rp2040_45474E621A87A7EA-if00
+
+[probe_eddy_current btt_eddy]
+sensor_type: ldc1612
+#z_offset: 1.0
+#i2c_address:
+i2c_mcu: eddy
+i2c_bus: i2c0f
 x_offset: -60
 y_offset: -10
-#z_offset: 3.0
-speed: 2.0
-lift_speed: 10
-samples: 2
-sample_retract_dist: 5.0
-samples_tolerance: 0.050
-stow_on_each_sample: false
-probe_with_touch_mode: true
+#data_rate: 500
 
-[safe_z_home]
-home_xy_position: 117.5,117.5 # Change coordinates to the center of your print bed
-z_hop: 10 # Move up 10mm
-z_hop_speed: 5
+[temperature_sensor btt_eddy_mcu]
+sensor_type: temperature_mcu
+sensor_mcu: eddy
+min_temp: 10
+max_temp: 100
 
+[temperature_probe btt_eddy]
+sensor_type: Generic 3950
+sensor_pin: eddy:gpio26
+horizontal_move_z: 2
 
 [bed_mesh]
+horizontal_move_z: 3
 speed: 300
-horizontal_move_z: 5 # was 5
-mesh_min: 50,50
-mesh_max: 170,170
-probe_count: 5,5
+mesh_min: 15,15
+mesh_max: 175,175
+probe_count: 9, 9
 algorithm: bicubic
-fade_start: 1
-fade_end: 10
-fade_target: 0
+
+
+[safe_z_home]
+home_xy_position: 125, 125
+z_hop: 10
+z_hop_speed: 25
+speed: 200
+
+
 
 
 #####################################################################
@@ -254,26 +297,27 @@ aliases:
 #*# pid_ki = 1.577
 #*# pid_kd = 65.620
 #*#
-#*# [bltouch]
-#*# z_offset = 3.070
-#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.031250, -0.015000, 0.091250, 0.012500, 0.057500
-#*# 	  0.012500, -0.010000, 0.077500, 0.010000, 0.056250
-#*# 	  0.032500, 0.015000, 0.077500, 0.005000, 0.040000
-#*# 	  0.027500, 0.015000, 0.088750, 0.032500, 0.058750
-#*# 	  0.028750, -0.007500, 0.076250, 0.018750, 0.047500
-#*# x_count = 5
-#*# y_count = 5
+#*# 	  -0.026780, -0.033063, -0.009812, 0.012813, 0.023279, 0.029926, 0.042951, 0.006205, 0.037552
+#*# 	  0.032315, 0.017363, 0.042264, 0.083232, 0.140267, 0.142630, 0.159560, 0.142624, 0.154790
+#*# 	  0.038274, 0.020843, 0.038009, 0.044809, 0.103133, 0.105748, 0.107141, 0.088132, 0.106962
+#*# 	  0.012446, 0.016942, 0.047501, 0.080035, 0.131109, 0.141169, 0.151620, 0.145704, 0.160899
+#*# 	  0.033034, 0.008820, 0.049263, 0.061487, 0.096004, 0.104555, 0.091966, 0.072705, 0.116551
+#*# 	  0.025454, 0.036951, 0.050485, 0.083235, 0.137788, 0.146588, 0.140939, 0.132591, 0.149670
+#*# 	  0.021844, 0.029664, 0.037030, 0.078839, 0.113533, 0.115380, 0.104219, 0.110311, 0.144502
+#*# 	  -0.001908, 0.017849, 0.029739, 0.073450, 0.100458, 0.138382, 0.139444, 0.116548, 0.154790
+#*# 	  0.000949, 0.013532, 0.021384, 0.044163, 0.080955, 0.091979, 0.083968, 0.088056, 0.107865
+#*# x_count = 9
+#*# y_count = 9
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
 #*# tension = 0.2
-#*# min_x = 50.0
+#*# min_x = 30.0
 #*# max_x = 170.0
-#*# min_y = 50.0
+#*# min_y = 30.0
 #*# max_y = 170.0
 #*#
 #*# [heater_bed]
@@ -281,3 +325,36 @@ aliases:
 #*# pid_kp = 74.625
 #*# pid_ki = 1.686
 #*# pid_kd = 825.539
+#*#
+#*# [probe_eddy_current btt_eddy]
+#*# reg_drive_current = 16
+#*# calibrate =
+#*# 	0.050000:3233123.116,0.100000:3232835.308,0.150000:3232425.630,
+#*# 	0.200000:3232002.754,0.250000:3231650.077,0.300000:3231283.184,
+#*# 	0.350000:3230861.787,0.400000:3230519.799,0.450000:3230160.193,
+#*# 	0.500000:3229780.567,0.550000:3229438.309,0.600000:3229082.168,
+#*# 	0.650000:3228724.120,0.700000:3228363.401,0.750000:3228065.224,
+#*# 	0.800000:3227719.795,0.850000:3227382.910,0.900000:3227063.153,
+#*# 	0.950000:3226746.341,1.000000:3226447.277,1.050000:3226157.191,
+#*# 	1.100000:3225821.107,1.150000:3225524.638,1.200000:3225233.433,
+#*# 	1.250000:3224951.342,1.300000:3224660.286,1.350000:3224362.453,
+#*# 	1.400000:3224105.978,1.450000:3223844.091,1.500000:3223592.547,
+#*# 	1.550000:3223302.446,1.600000:3223054.672,1.650000:3222807.003,
+#*# 	1.700000:3222572.912,1.750000:3222296.039,1.800000:3222102.340,
+#*# 	1.850000:3221871.495,1.900000:3221606.894,1.950000:3221402.826,
+#*# 	2.000000:3221192.555,2.050000:3220972.404,2.100000:3220773.499,
+#*# 	2.150000:3220573.643,2.200000:3220375.841,2.250000:3220179.545,
+#*# 	2.300000:3219986.991,2.350000:3219815.489,2.400000:3219620.966,
+#*# 	2.450000:3219448.561,2.500000:3219280.276,2.550000:3219103.417,
+#*# 	2.600000:3218923.879,2.650000:3218768.324,2.700000:3218607.575,
+#*# 	2.750000:3218437.922,2.800000:3218290.781,2.850000:3218152.998,
+#*# 	2.900000:3218002.158,2.950000:3217856.812,3.000000:3217718.452,
+#*# 	3.050000:3217581.930,3.100000:3217441.412,3.150000:3217312.396,
+#*# 	3.200000:3217192.517,3.250000:3217058.360,3.300000:3216954.256,
+#*# 	3.350000:3216781.309,3.400000:3216695.063,3.450000:3216574.284,
+#*# 	3.500000:3216463.676,3.550000:3216339.228,3.600000:3216254.346,
+#*# 	3.650000:3216144.158,3.700000:3216039.229,3.750000:3215950.307,
+#*# 	3.800000:3215837.399,3.850000:3215743.899,3.900000:3215636.362,
+#*# 	3.950000:3215533.264,4.000000:3215434.514,4.050000:3215351.963
+#*# calibration_temp = 34.045362
+#*# z_offset = 2.970
