--- a/macros.cfg
+++ b/macros.cfg
@@ -72,6 +72,7 @@ gcode:
     G1 E{PRE_PURGE_PRIME_LENGTH} F500       ; pre-purge prime LENGTH SHOULD MATCH YOUR PRINT_END RETRACT
     G1 X{xStart + movementLength} E{extrudeAmount} F{movementSpeed}       ; intro line 1
 
+  
     G92 E0.0                                ; reset extruder
     M82                                     ; Absolute extrusion mode
     G1 Z5.0                                 ; move nozzle to prevent scratch
@@ -118,8 +119,11 @@ gcode:
 
     M190 S{bedtempAlmost}         ; set & wait for bed temp
     
-    G28 Z                                                ; final z homing
-    BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
+    G28 Z     ; final z homing
+    #BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
+    BED_MESH_CALIBRATE ADAPTIVE=1
+    # BED_MESH_PROFILE LOAD="default"
+    
     M104 S{hotendtemp}                                   ; set & don't wait for hotend temp
 
     G1 X0 Y0 F{maxVelocityAdjusted}
@@ -280,9 +284,9 @@ gcode:
 gcode:
     M117 Heating bed & nozzle...
     M104 S{150}
-    M190 S{params.BED_TEMP|default(60, true)}
+    M190 S{params.BED_TEMP|default(70, true)}
     G28
-    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={params.BED_TEMP|default(60, true)}
+    TEMPERATURE_WAIT SENSOR=heater_bed MINIMUM={params.BED_TEMP|default(70, true)}
     PROBE_CALIBRATE
 
 
@@ -291,14 +295,20 @@ gcode:
   G28
   BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
 
-[gcode_macro Hotend_PID_240]
-gcode: 
-   PID_CALIBRATE HEATER=extruder TARGET=240
+[gcode_macro Level_Bed_Screws]
+gcode:
+  G28
+  SCREWS_TILT_CALCULATE
 
-[gcode_macro Bed_PID_70]
+[gcode_macro Hotend_PID_255]
 gcode: 
-   PID_CALIBRATE HEATER=heater_bed TARGET=70
+   PID_CALIBRATE HEATER=extruder TARGET=255
 
+
+[gcode_macro Bed_PID_80]
+gcode: 
+   PID_CALIBRATE HEATER=heater_bed TARGET=80
+   
 ######################
 # input shaper 
 #
