--- a/macros.cfg
+++ b/macros.cfg
@@ -78,7 +78,6 @@ gcode:
     G1 Z5.0                                 ; move nozzle to prevent scratch
 
 
-
 [gcode_macro PRINT_START]
 gcode:
 
@@ -120,8 +119,8 @@ gcode:
     M190 S{bedtempAlmost}         ; set & wait for bed temp
     
     G28 Z     ; final z homing
-    #BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
-    BED_MESH_CALIBRATE ADAPTIVE=1
+    BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
+    # BED_MESH_CALIBRATE ADAPTIVE=1
     # BED_MESH_PROFILE LOAD="default"
     
     M104 S{hotendtemp}                                   ; set & don't wait for hotend temp
@@ -132,6 +131,31 @@ gcode:
     G1 Z20 F3000                                         ; move nozzle away from bed
     PURGE_LINE
 
+# [gcode_macro PRINT_START]
+# gcode:
+#     {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+#     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+#     # Start bed heating
+#     M140 S{BED_TEMP}
+#     # Use absolute coordinates
+#     G90
+#     # Reset the G-Code Z offset (adjust Z offset if needed)
+#     SET_GCODE_OFFSET Z=0.0
+#     # Home the printer
+#     G28
+#     # Bed mesh 
+#     BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
+#     # Move the nozzle near the bed
+#     G1 Z5 F3000
+#     # Move the nozzle very close to the bed
+#     G1 Z0.15 F300
+#     # Wait for bed to reach temperature
+#     M190 S{BED_TEMP}
+#     # Set and wait for nozzle to reach temperature
+#     M109 S{EXTRUDER_TEMP}
+#     # Pruge 
+#     PURGE_LINE
+    
 [gcode_macro PRINT_END]
 gcode:
     ADJUST_FILAMENT_SENSOR_STATUS ENABLE=0
@@ -183,6 +207,7 @@ gcode:
     G1 Y200                        ; move bed forward after print
     M84                            ; disable steppers
 
+
 [gcode_macro LOAD_FILAMENT]
 gcode:
     M83                            ; set extruder to relative
@@ -204,6 +229,34 @@ gcode:
     CONDITIONAL_BEEP i=1 dur=100
     PAUSE                ; Pause
 
+# [gcode_macro PAUSE]
+# rename_existing: BASE_PAUSE
+# gcode:
+#     # Parameters
+#     {% set z = params.Z|default(10)|int %}                                                   ; z hop amount
+
+#     {% if printer['pause_resume'].is_paused|int == 0 %}
+#         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=zhop VALUE={z}                              ; set z hop variable for reference in resume macro
+#         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer['extruder'].target}    ; set hotend temp variable for reference in resume macro
+
+#         ADJUST_FILAMENT_SENSOR_STATUS ENABLE=0
+
+#         SAVE_GCODE_STATE NAME=PAUSE                                                          ; save current print position for resume
+#         BASE_PAUSE                                                                           ; pause print
+#         {% if (printer.gcode_move.position.z + z) < printer.toolhead.axis_maximum.z %}       ; check that zhop doesn't exceed z max
+#             G91                                                                              ; relative positioning
+#             G1 Z{z} F900                                                                     ; raise Z up by z hop amount
+#         {% else %}
+#             { action_respond_info("Pause zhop exceeds maximum Z height.") }                  ; if z max is exceeded, show message and set zhop value for resume to 0
+#             SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=zhop VALUE=0
+#         {% endif %}
+#         G90                                                                                  ; absolute positioning
+#         G1 X{printer.toolhead.axis_maximum.x/2} Y{printer.toolhead.axis_minimum.y+5} F6000   ; park toolhead at front center
+#         SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
+#         M104 S0                                                                              ; turn off hotend
+#         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
+#     {% endif %}
+
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
@@ -214,8 +267,7 @@ gcode:
         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=zhop VALUE={z}                              ; set z hop variable for reference in resume macro
         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer['extruder'].target}    ; set hotend temp variable for reference in resume macro
 
-        ADJUST_FILAMENT_SENSOR_STATUS ENABLE=0
-
+        SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=0                                  ; disable filament sensor
         SAVE_GCODE_STATE NAME=PAUSE                                                          ; save current print position for resume
         BASE_PAUSE                                                                           ; pause print
         {% if (printer.gcode_move.position.z + z) < printer.toolhead.axis_maximum.z %}       ; check that zhop doesn't exceed z max
@@ -232,6 +284,35 @@ gcode:
         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
     {% endif %}
 
+    
+
+# [gcode_macro RESUME]
+# rename_existing: BASE_RESUME
+# variable_zhop: 0
+# variable_etemp: 0
+# gcode:
+#     # Parameters
+#     {% set e = params.E|default(2.5)|int %}                                          ; hotend prime amount (in mm)
+
+#     {% if printer['pause_resume'].is_paused|int == 1 %}
+
+#         SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}  ; set timeout back to configured value
+#         {% if etemp > 0 %}
+#             M109 S{etemp|int}                                                        ; wait for hotend to heat back up
+#         {% endif %}
+#         RESTORE_GCODE_STATE NAME=PAUSEPARK MOVE=1 MOVE_SPEED=100                     ; go back to parked position in case toolhead was moved during pause (otherwise the return zhop can error)
+#         G91                                                                          ; relative positioning
+#         M83                                                                          ; relative extruder positioning
+#         {% if printer[printer.toolhead.extruder].temperature >= printer.configfile.settings.extruder.min_extrude_temp %}
+#             G1 Z{zhop * -1} E{e} F900                                                ; prime nozzle by E, lower Z back down
+#         {% else %}
+#             G1 Z{zhop * -1} F900                                                     ; lower Z back down without priming (just in case we are testing the macro with cold hotend)
+#         {% endif %}
+#         RESTORE_GCODE_STATE NAME=PAUSE MOVE=1 MOVE_SPEED=60                          ; restore position
+#         BASE_RESUME                                                                  ; resume print
+#     {% endif %}
+
+    
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
 variable_zhop: 0
@@ -241,7 +322,8 @@ gcode:
     {% set e = params.E|default(2.5)|int %}                                          ; hotend prime amount (in mm)
 
     {% if printer['pause_resume'].is_paused|int == 1 %}
-
+        SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1                          ; enable filament sensor
+        #INITIAL_RGB                                                                    ; reset LCD color
         SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}  ; set timeout back to configured value
         {% if etemp > 0 %}
             M109 S{etemp|int}                                                        ; wait for hotend to heat back up
@@ -258,6 +340,17 @@ gcode:
         BASE_RESUME                                                                  ; resume print
     {% endif %}
 
+
+[gcode_macro CANCEL_PRINT]
+rename_existing: BASE_CANCEL_PRINT
+gcode:
+    SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout} ; set timeout back to configured value
+    CLEAR_PAUSE
+    # SDCARD_RESET_FILE
+    PRINT_END
+    BASE_CANCEL_PRINT
+
+
 [gcode_macro _CG28]
 # Conditional homing
 gcode:
@@ -265,6 +358,18 @@ gcode:
         G28
     {% endif %}
 
+    
+[gcode_macro PROBE_EDDY_CURRENT_CALIBRATE_AUTO]
+gcode:
+  BED_MESH_CLEAR
+  G28 X Y
+  G1 X{ printer.toolhead.axis_maximum.x/2 } Y{ printer.toolhead.axis_maximum.y/2 } F6000
+  {% if 'z' not in printer.toolhead.homed_axes %}
+    SET_KINEMATIC_POSITION Z={ printer.toolhead.axis_maximum.z-1 } # Allows the user to work it down until it touches.
+  {% endif %}
+  PROBE_EDDY_CURRENT_CALIBRATE {rawparams}
+  
+  
 [gcode_macro BEEP]
 description: BEEP I=3 DUR=200 FREQ=2000: Beep 3 times, for 200ms each, at 2kHz frequency.
 gcode:
