macros - disable turn hotend off on pause, breaks resume otherwise

--- a/printer.cfg
+++ b/printer.cfg
@@ -32,8 +32,6 @@ max_z_accel: 500
 square_corner_velocity: 5.0
 
 [exclude_object]
-#
-[pause_resume]
 
 [virtual_sdcard]
 path: /home/cass/printer_data/gcodes
@@ -147,10 +145,6 @@ interpolate: False
 heater_pin: PC9
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
-#control: pid
-#pid_Kp: 54.027
-#pid_Ki: 0.770
-#pid_Kd: 948.182
 min_temp: 0
 max_temp: 130
 
@@ -178,96 +172,87 @@ pin: PC6
 #   Probe Related
 #####################################################################
 
-# [bltouch]
-# sensor_pin: ^PC14
-# control_pin: PA1
-# x_offset: -60
-# y_offset: -10
-# #z_offset: 3.0
-# speed: 2.0
-# lift_speed: 10
-# samples: 2
-# sample_retract_dist: 5.0
-# samples_tolerance: 0.050
-# stow_on_each_sample: false
-# probe_with_touch_mode: true
+[bltouch]
+sensor_pin: ^PC14
+control_pin: PA1
+x_offset: -60
+y_offset: -10
+speed: 2.0
+lift_speed: 10
+samples: 2
+sample_retract_dist: 5.0
+samples_tolerance: 0.050
+stow_on_each_sample: false
+probe_with_touch_mode: true
 
-# [safe_z_home]
-# home_xy_position: 117.5,117.5 # Change coordinates to the center of your print bed
-# z_hop: 10 # Move up 10mm
-# z_hop_speed: 5
+[safe_z_home]
+home_xy_position: 117.5,117.5 # Change coordinates to the center of your print bed
+z_hop: 10 # Move up 10mm
+z_hop_speed: 5
 
-# [bed_mesh]
-# speed: 300
-# horizontal_move_z: 5 # was 5
-# mesh_min: 50,50
-# mesh_max: 170,170
-# probe_count: 5,5
-# algorithm: bicubic
-# fade_start: 1
-# fade_end: 10
-# fade_target: 0
+[bed_mesh]
+speed: 200
+horizontal_move_z: 5 # was 5
+mesh_min: 50,50
+mesh_max: 170,170
+probe_count: 5,5
+algorithm: bicubic
+fade_start: 1
+fade_end: 10
+fade_target: 0
 
 
 #####################################################################
 # Eddy Probe
 #####################################################################
 
-[mcu eddy]
-serial: /dev/serial/by-id/usb-Klipper_rp2040_45474E621A87A7EA-if00
+# [mcu eddy]
+# serial: /dev/serial/by-id/usb-Klipper_rp2040_45474E621A87A7EA-if00
 
-[probe_eddy_current btt_eddy]
-sensor_type: ldc1612
-#z_offset: 0.5
-#i2c_address:
-i2c_mcu: eddy
-i2c_bus: i2c0f
-x_offset: -60
-y_offset: -10
-#data_rate: 500
+# [probe_eddy_current btt_eddy]
+# sensor_type: ldc1612
+# #z_offset: 0.5
+# #i2c_address:
+# i2c_mcu: eddy
+# i2c_bus: i2c0f
+# x_offset: -60
+# y_offset: -10
+# #data_rate: 500
 
-[temperature_sensor btt_eddy_mcu]
-sensor_type: temperature_mcu
-sensor_mcu: eddy
-min_temp: 10
-max_temp: 100
+# [temperature_sensor btt_eddy_mcu]
+# sensor_type: temperature_mcu
+# sensor_mcu: eddy
+# min_temp: 10
+# max_temp: 100
 
-[temperature_probe btt_eddy]
-sensor_type: Generic 3950
-sensor_pin: eddy:gpio26
-horizontal_move_z: 2
+# [temperature_probe btt_eddy]
+# sensor_type: Generic 3950
+# sensor_pin: eddy:gpio26
+# horizontal_move_z: 2
 
-[bed_mesh]
-horizontal_move_z: 2
-speed: 200
-# mesh_min: 15,15
-# mesh_max: 175,175
-mesh_min: 50,50
-mesh_max: 170,170
-probe_count: 9, 9
-algorithm: bicubic
+# [bed_mesh]
+# horizontal_move_z: 2
+# speed: 200
+# # mesh_min: 15,15
+# # mesh_max: 175,175
+# mesh_min: 50,50
+# mesh_max: 170,170
+# probe_count: 9, 9
+# algorithm: bicubic
 
 
-[safe_z_home]
-home_xy_position: 117.5,117.5
-z_hop: 10
-z_hop_speed: 25
-speed: 200
+# [safe_z_home]
+# home_xy_position: 117.5,117.5
+# z_hop: 10
+# z_hop_speed: 25
+# speed: 200
 
-[force_move]
-enable_force_move: True
+# [force_move]
+# enable_force_move: True
 
 #####################################################################
 #   Misc
 #####################################################################
-
-[filament_switch_sensor RunoutSensor]
-switch_pin: PC15    ## SKR E3 mini v3
-pause_on_runout: True
-runout_gcode: PAUSE
-insert_gcode: RESUME
-event_delay: 3.0
-pause_delay: 0.5
 
 
 [screws_tilt_adjust]
@@ -294,83 +279,29 @@ aliases:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 17.907
-#*# pid_ki = 1.341
-#*# pid_kd = 59.764
+#*# pid_kp = 18.111
+#*# pid_ki = 1.342
+#*# pid_kd = 61.125
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 75.105
-#*# pid_ki = 1.808
-#*# pid_kd = 780.151
+#*# pid_kp = 74.625
+#*# pid_ki = 1.686
+#*# pid_kd = 825.539
 #*#
-#*# [probe_eddy_current btt_eddy]
-#*# reg_drive_current = 16
-#*# calibrate =
-#*# 	0.050000:3271778.015,0.090000:3271114.633,0.130000:3270277.144,
-#*# 	0.170000:3269381.074,0.210000:3268432.807,0.250000:3267511.767,
-#*# 	0.290000:3266590.665,0.330000:3265622.217,0.370000:3264722.653,
-#*# 	0.410000:3263786.975,0.450000:3262884.877,0.490000:3262016.535,
-#*# 	0.530000:3261131.374,0.570000:3260279.042,0.610000:3259436.192,
-#*# 	0.650000:3258589.913,0.690000:3257775.739,0.730000:3256966.556,
-#*# 	0.770000:3256186.390,0.810000:3255390.584,0.850000:3254623.191,
-#*# 	0.890000:3253882.746,0.930000:3253147.722,0.970000:3252437.189,
-#*# 	1.010000:3251727.061,1.050000:3250994.289,1.090000:3250325.176,
-#*# 	1.130000:3249642.636,1.170000:3248983.611,1.210000:3248314.151,
-#*# 	1.250000:3247703.449,1.290000:3247093.905,1.330000:3246460.462,
-#*# 	1.370000:3245852.947,1.410000:3245272.083,1.450000:3244686.625,
-#*# 	1.490000:3244116.733,1.530000:3243549.921,1.570000:3243030.880,
-#*# 	1.610000:3242499.177,1.650000:3241957.750,1.690000:3241451.817,
-#*# 	1.730000:3240956.576,1.770000:3240460.904,1.810000:3240002.967,
-#*# 	1.850000:3239510.388,1.890000:3239037.912,1.930000:3238595.046,
-#*# 	1.970000:3238114.371,2.010000:3237695.426,2.050000:3237247.374,
-#*# 	2.090000:3236848.422,2.130000:3236417.765,2.170000:3235975.290,
-#*# 	2.210000:3235585.598,2.250000:3235193.338,2.290000:3234778.461,
-#*# 	2.330000:3234378.176,2.370000:3234032.046,2.410000:3233641.830,
-#*# 	2.450000:3233293.072,2.490000:3232912.776,2.530000:3232551.479,
-#*# 	2.570000:3232215.747,2.610000:3231860.815,2.650000:3231519.362,
-#*# 	2.690000:3231178.218,2.730000:3230864.432,2.770000:3230546.849,
-#*# 	2.810000:3230221.962,2.850000:3229926.828,2.890000:3229619.873,
-#*# 	2.930000:3229335.975,2.970000:3229029.172,3.010000:3228745.777,
-#*# 	3.050000:3228444.506,3.090000:3228160.500,3.130000:3227896.471,
-#*# 	3.170000:3227643.628,3.210000:3227366.894,3.250000:3227099.229,
-#*# 	3.290000:3226818.264,3.330000:3226596.519,3.370000:3226338.361,
-#*# 	3.410000:3226082.484,3.450000:3225835.716,3.490000:3225591.307,
-#*# 	3.530000:3225353.433,3.570000:3225166.871,3.610000:3224915.612,
-#*# 	3.650000:3224691.233,3.690000:3224489.304,3.730000:3224264.996,
-#*# 	3.770000:3224046.282,3.810000:3223860.701,3.850000:3223645.432,
-#*# 	3.890000:3223423.021,3.930000:3223238.114,3.970000:3223029.682,
-#*# 	4.010000:3222837.045,4.050000:3222653.249
-#*# z_offset = 0.640
-#*#
-#*# [temperature_probe btt_eddy]
-#*# calibration_temp = 33.096427
-#*# drift_calibration =
-#*# 	3282185.587977, -425.610980, 2.744270
-#*# 	3264767.852294, -124.904327, 0.178096
-#*# 	3253228.731062, -50.087786, -0.238761
-#*# 	3243816.147033, 11.619516, -0.595042
-#*# 	3235761.528395, 97.481989, -1.351036
-#*# 	3230370.824967, 112.375439, -1.336023
-#*# 	3225155.028028, 165.661693, -1.809149
-#*# 	3220966.547845, 204.528210, -2.127575
-#*# 	3217885.014786, 223.550843, -2.265357
-#*# drift_calibration_min_temp = 33.02709476436926
+#*# [bltouch]
+#*# z_offset = 1.017
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.116653, 0.121856, 0.137747, 0.174195, 0.208279, 0.205717, 0.164257, 0.170993, 0.186084
-#*# 	  0.086000, 0.089293, 0.104152, 0.142347, 0.170971, 0.169183, 0.143160, 0.148923, 0.164953
-#*# 	  0.080385, 0.084469, 0.095017, 0.135069, 0.154112, 0.150510, 0.126745, 0.128498, 0.140119
-#*# 	  0.090144, 0.092825, 0.100592, 0.130336, 0.150646, 0.146634, 0.113334, 0.110220, 0.126028
-#*# 	  0.103255, 0.095934, 0.105190, 0.133266, 0.153841, 0.143549, 0.113729, 0.109877, 0.119898
-#*# 	  0.105618, 0.100042, 0.112204, 0.143599, 0.159826, 0.147691, 0.123536, 0.114650, 0.128806
-#*# 	  0.117379, 0.109672, 0.119078, 0.144581, 0.161478, 0.150551, 0.123295, 0.124157, 0.131798
-#*# 	  0.116489, 0.114573, 0.124955, 0.148381, 0.165259, 0.153684, 0.129438, 0.123843, 0.138574
-#*# 	  0.129167, 0.120296, 0.124102, 0.142511, 0.157393, 0.141898, 0.111523, 0.106554, 0.112109
-#*# x_count = 9
-#*# y_count = 9
+#*# 	-0.058750, -0.025000, -0.001250, 0.011250, 0.053750
+#*# 	-0.103750, -0.032500, 0.025000, 0.020000, 0.032500
+#*# 	-0.076250, -0.037500, 0.010000, 0.013750, 0.028750
+#*# 	-0.090000, -0.031250, 0.022500, 0.005000, 0.043750
+#*# 	-0.143750, -0.056250, -0.030000, -0.021250, 0.003750
+#*# x_count = 5
+#*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
