--- a/macros.cfg
+++ b/macros.cfg
@@ -1,7 +1,6 @@
 [force_move]
 enable_force_move: True
 
-
 [gcode_macro _globals]
 variable_filament_sensor_enabled: 1 # NOTE Enable(1) or disable(0) the filament sensor, if one is connected
 variable_beeping_enabled: 1 # NOTE Enable(1) or disable(0) beeping everywhere except during gantry calibration
@@ -11,6 +10,14 @@ gcode:
     # Don't delete this section
 
 [pause_resume]
+
+[filament_switch_sensor filament_sensor]
+switch_pin: PC15    ## SKR E3 mini v3
+pause_on_runout: False
+runout_gcode: PAUSE
+insert_gcode: RESUME
+event_delay: 3.0
+
 
 [gcode_macro CONDITIONAL_BEEP]
 gcode:
@@ -31,7 +38,7 @@ rename_existing: M99109
 gcode:
     #Parameters
     {% set s = params.S|float %}
-    
+
     # M104 {% for p in params %}{'%s%s' % (p, params[p])}{% endfor %}  ; Set hotend temp
     {% if s != 0 %}
         TEMPERATURE_WAIT SENSOR=extruder MINIMUM={s} MAXIMUM={s+1}   ; Wait for hotend temp (within 1 degree)
@@ -72,7 +79,7 @@ gcode:
     G1 E{PRE_PURGE_PRIME_LENGTH} F500       ; pre-purge prime LENGTH SHOULD MATCH YOUR PRINT_END RETRACT
     G1 X{xStart + movementLength} E{extrudeAmount} F{movementSpeed}       ; intro line 1
 
-  
+
     G92 E0.0                                ; reset extruder
     M82                                     ; Absolute extrusion mode
     G1 Z5.0                                 ; move nozzle to prevent scratch
@@ -85,7 +92,7 @@ gcode:
     {% set bedtemp = params.BED|int %}
     {% set hotendtemp = params.HOTEND|int %}
     {% set chambertemp = params.CHAMBER|default(0)|int %}
-    
+
     # Other variables
     {% set bedtempSlicer = bedtemp %}
     {% set bedtempOver = printer["gcode_macro _globals"].bed_temp_over|default(0)|int %}
@@ -117,12 +124,12 @@ gcode:
     {% endif %}
 
     M190 S{bedtempAlmost}         ; set & wait for bed temp
-    
+
     G28 Z     ; final z homing
-    BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
+    #BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
     # BED_MESH_CALIBRATE ADAPTIVE=1
-    # BED_MESH_PROFILE LOAD="default"
-    
+    BED_MESH_PROFILE LOAD="default"
+
     M104 S{hotendtemp}                                   ; set & don't wait for hotend temp
 
     G1 X0 Y0 F{maxVelocityAdjusted}
@@ -131,31 +138,7 @@ gcode:
     G1 Z20 F3000                                         ; move nozzle away from bed
     PURGE_LINE
 
-# [gcode_macro PRINT_START]
-# gcode:
-#     {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
-#     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
-#     # Start bed heating
-#     M140 S{BED_TEMP}
-#     # Use absolute coordinates
-#     G90
-#     # Reset the G-Code Z offset (adjust Z offset if needed)
-#     SET_GCODE_OFFSET Z=0.0
-#     # Home the printer
-#     G28
-#     # Bed mesh 
-#     BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
-#     # Move the nozzle near the bed
-#     G1 Z5 F3000
-#     # Move the nozzle very close to the bed
-#     G1 Z0.15 F300
-#     # Wait for bed to reach temperature
-#     M190 S{BED_TEMP}
-#     # Set and wait for nozzle to reach temperature
-#     M109 S{EXTRUDER_TEMP}
-#     # Pruge 
-#     PURGE_LINE
-    
+
 [gcode_macro PRINT_END]
 gcode:
     ADJUST_FILAMENT_SENSOR_STATUS ENABLE=0
@@ -214,7 +197,7 @@ gcode:
     G1 E30 F300                    ; load
     G1 E15 F150                    ; prime nozzle with filament
     M82                            ; set extruder to absolute
-    
+
 [gcode_macro UNLOAD_FILAMENT]
 gcode:
     M83                            ; set extruder to relative
@@ -224,38 +207,11 @@ gcode:
 
 [gcode_macro M600]
 gcode:
-    CONDITIONAL_BEEP i=1 dur=300
-    CONDITIONAL_BEEP i=1 dur=100
-    CONDITIONAL_BEEP i=1 dur=100
-    PAUSE                ; Pause
+    {action_respond_info("Pausing print")}
+    STATUS_READY
+	PAUSE
 
-# [gcode_macro PAUSE]
-# rename_existing: BASE_PAUSE
-# gcode:
-#     # Parameters
-#     {% set z = params.Z|default(10)|int %}                                                   ; z hop amount
 
-#     {% if printer['pause_resume'].is_paused|int == 0 %}
-#         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=zhop VALUE={z}                              ; set z hop variable for reference in resume macro
-#         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=etemp VALUE={printer['extruder'].target}    ; set hotend temp variable for reference in resume macro
-
-#         ADJUST_FILAMENT_SENSOR_STATUS ENABLE=0
-
-#         SAVE_GCODE_STATE NAME=PAUSE                                                          ; save current print position for resume
-#         BASE_PAUSE                                                                           ; pause print
-#         {% if (printer.gcode_move.position.z + z) < printer.toolhead.axis_maximum.z %}       ; check that zhop doesn't exceed z max
-#             G91                                                                              ; relative positioning
-#             G1 Z{z} F900                                                                     ; raise Z up by z hop amount
-#         {% else %}
-#             { action_respond_info("Pause zhop exceeds maximum Z height.") }                  ; if z max is exceeded, show message and set zhop value for resume to 0
-#             SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=zhop VALUE=0
-#         {% endif %}
-#         G90                                                                                  ; absolute positioning
-#         G1 X{printer.toolhead.axis_maximum.x/2} Y{printer.toolhead.axis_minimum.y+5} F6000   ; park toolhead at front center
-#         SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
-#         M104 S0                                                                              ; turn off hotend
-#         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
-#     {% endif %}
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
@@ -280,39 +236,12 @@ gcode:
         G90                                                                                  ; absolute positioning
         G1 X{printer.toolhead.axis_maximum.x/2} Y{printer.toolhead.axis_minimum.y+5} F6000   ; park toolhead at front center
         SAVE_GCODE_STATE NAME=PAUSEPARK                                                      ; save parked position in case toolhead is moved during the pause (otherwise the return zhop can error)
-        M104 S0                                                                              ; turn off hotend
+        # M104 S0                                                                            ; turn off hotend, disabled due to not working on my device.. breaks pause/resume
         SET_IDLE_TIMEOUT TIMEOUT=43200                                                       ; set timeout to 12 hours
     {% endif %}
 
-    
 
-# [gcode_macro RESUME]
-# rename_existing: BASE_RESUME
-# variable_zhop: 0
-# variable_etemp: 0
-# gcode:
-#     # Parameters
-#     {% set e = params.E|default(2.5)|int %}                                          ; hotend prime amount (in mm)
 
-#     {% if printer['pause_resume'].is_paused|int == 1 %}
-
-#         SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}  ; set timeout back to configured value
-#         {% if etemp > 0 %}
-#             M109 S{etemp|int}                                                        ; wait for hotend to heat back up
-#         {% endif %}
-#         RESTORE_GCODE_STATE NAME=PAUSEPARK MOVE=1 MOVE_SPEED=100                     ; go back to parked position in case toolhead was moved during pause (otherwise the return zhop can error)
-#         G91                                                                          ; relative positioning
-#         M83                                                                          ; relative extruder positioning
-#         {% if printer[printer.toolhead.extruder].temperature >= printer.configfile.settings.extruder.min_extrude_temp %}
-#             G1 Z{zhop * -1} E{e} F900                                                ; prime nozzle by E, lower Z back down
-#         {% else %}
-#             G1 Z{zhop * -1} F900                                                     ; lower Z back down without priming (just in case we are testing the macro with cold hotend)
-#         {% endif %}
-#         RESTORE_GCODE_STATE NAME=PAUSE MOVE=1 MOVE_SPEED=60                          ; restore position
-#         BASE_RESUME                                                                  ; resume print
-#     {% endif %}
-
-    
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
 variable_zhop: 0
@@ -323,7 +252,6 @@ gcode:
 
     {% if printer['pause_resume'].is_paused|int == 1 %}
         SET_FILAMENT_SENSOR SENSOR=filament_sensor ENABLE=1                          ; enable filament sensor
-        #INITIAL_RGB                                                                    ; reset LCD color
         SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout}  ; set timeout back to configured value
         {% if etemp > 0 %}
             M109 S{etemp|int}                                                        ; wait for hotend to heat back up
@@ -358,7 +286,7 @@ gcode:
         G28
     {% endif %}
 
-    
+
 [gcode_macro PROBE_EDDY_CURRENT_CALIBRATE_AUTO]
 gcode:
   BED_MESH_CLEAR
@@ -368,8 +296,8 @@ gcode:
     SET_KINEMATIC_POSITION Z={ printer.toolhead.axis_maximum.z-1 } # Allows the user to work it down until it touches.
   {% endif %}
   PROBE_EDDY_CURRENT_CALIBRATE {rawparams}
-  
-  
+
+
 [gcode_macro BEEP]
 description: BEEP I=3 DUR=200 FREQ=2000: Beep 3 times, for 200ms each, at 2kHz frequency.
 gcode:
@@ -396,7 +324,7 @@ gcode:
 
 
 [gcode_macro Eddy_Mesh]
-gcode: 
+gcode:
   G28
   BED_MESH_CALIBRATE SCAN_MODE=rapid METHOD=scan
 
@@ -406,16 +334,16 @@ gcode:
   SCREWS_TILT_CALCULATE
 
 [gcode_macro Hotend_PID_255]
-gcode: 
+gcode:
    PID_CALIBRATE HEATER=extruder TARGET=255
 
 
 [gcode_macro Bed_PID_80]
-gcode: 
+gcode:
    PID_CALIBRATE HEATER=heater_bed TARGET=80
-   
+
 ######################
-# input shaper 
+# input shaper
 #
 [gcode_macro ADXL_SHAPE_ALL]
 description: Test resonances for both axis
@@ -489,7 +417,7 @@ gcode:
     SET_GCODE_VARIABLE MACRO=DRYER_STATUS VARIABLE=bed_temperature VALUE={temprature}
     #SET_GCODE_VARIABLE MACRO=DRYER_STATUS VARIABLE=chamber_temperature VALUE={CHAMBER}
     UPDATE_DELAYED_GCODE ID=DRYER_TIMER DURATION=1
-    SET_IDLE_TIMEOUT 
+    SET_IDLE_TIMEOUT
 
 [gcode_macro STOP_DRYER]
 gcode:
@@ -522,7 +450,7 @@ gcode:
 [gcode_macro DRY_TPU]
 gcode:
     START_DRYER TEMPERATURE=80 CHAMBER=0 TIME=14400
-    
+
 [gcode_macro DRY_PLA]
 gcode:
     START_DRYER TEMPERATURE=80 CHAMBER=0 TIME=14400
